deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: olli-forecast-sales
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  tls:
  - hosts:
    - forecast.olli.com
    secretName: olli-forecast-tls
  rules:
  - host: forecast.olli.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: olli-forecast-sales
            port:
              number: 80
